--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,47 @@ services:
       - ./app:/app
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
-      
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app_db
+      - DB_USER=postgres
+      - DB_PASS=secretpwd123
+    depends_on:
+      - mysql_db
+      - pg_db
+      - mongo_db
+
+  mysql_db:
+    image: mysql:5.6.26
+    environment:
+      - MYSQL_DB=django_test
+      - MYSQL_USER=root
+      - MYSQL_PWD=123456
+    ports:
+      - '33061:3306'
+    expose:
+      - '33061'
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+  pg_db:
+    image: postgres:10-alpine
+    environment:
+      - POSTGRES_DB=app_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=secretpwd123
+
+  mongo_db:
+    image: mongo
+    environment:
+      - MONGO_INITDB_DATABASE=django_test
+    volumes:
+      - ./init_mongo.js:/docker-entrypoint-initdb.d/init_mongo.js:ro
+      - mongodb-data:/data/db
+    ports:
+      - 27018:27017
+    restart: unless-stopped
+
+volumes:
+  mysql-data:
+  mongodb-data:
